--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <title>TOP Recipes Website</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/baked-dijon-salmon.html">Baked Dijon Salmon</a>
-
-
+      <h1>Odin Recipes</h1>
+    <ul>
+        <li>
+            <a href="recipes/baked-dijon-salmon.html">Baked Dijon Salmon</a>
+        </li>
+        <li>
+            <a href="recipes/pizza.html">Pizza</a>
+        </li>
+        <li>
+            <a href="recipes/hummus.html">Hummus</a>
+        </li>
+    </ul>
   </body>
 
 </html>
